Fixed hr overlap issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,10 @@ footer
   text-align: center
 }
 
-footer > hr{
+footer > .line{
 	width: 50%;
 	margin: auto;
+	border-top: 1px solid #a8a4a4;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
